@@ -1,3 +1,7 @@
+2007-01-19  Marco Trudel  <mtrudel@gmx.ch>
+
+	* java/util/Arrays.java (binarySearch): Change comparison order.
+
 2007-01-17  Keith Seitz  <keiths@redhat.com>
 
 	* gnu/classpath/jdwp/events/filters/StepFilter.java:
